...
        android:layout_marginTop="40dp"
        android:text="Edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="75dp"
        android:text="Delete"
        app:layout_constraintEnd_toEndOf="parent"
...
